hphp/hack/test/typecheck/constraints/class_method.php.exp
File "class_method.php", line 6, characters 26-38:
Some type constraint(s) here are violated (Typing[4323])
File "class_method.php", line 3, characters 22-22:
'T' is a constrained type parameter
File "class_method.php", line 3, characters 27-29:
Expected num
File "class_method.php", line 6, characters 37-37:
But got T
